minor z-index fix

--- a/style.css
+++ b/style.css
@@ -388,6 +388,7 @@ footer {
     min-width: 300px; */
     width: 300px;
     height: 100vh;
+    z-index: 3;
 
     position: fixed;
     left: 0;
